project cards, starting to style hero, playing with framermotion

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,6 +1,23 @@
 .hero {
-    height: 400px;
-    background: lavender;
-    display: flex;
+    min-height: 400px;
     width: 100%;
+    margin-top: 50px;
+    perspective: 1000px;
+}
+
+.nameWrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    transform: rotateY(-40deg);
+    transform-style: preserve-3d;
+}
+
+.name {
+    font-size: 8rem;
+    font-weight: 900;
+    text-align: right;
+    padding-right: 8vw;
+
 }
