--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+body {
+  background: rgb(50, 50, 50);
+  color: #ededed;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,7 +30,6 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
