--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,23 +1,59 @@
 .hero {
-    min-height: 400px;
-    width: 100%;
-    margin-top: 50px;
+    min-height: 600px;
+    width: 90vw;
+    margin-top: 90px;
     perspective: 1000px;
+    position: relative;
 }
 
 .nameWrapper {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
-    transform: rotateY(-40deg);
+    transform: rotateY(-45deg);
     transform-style: preserve-3d;
+    padding-top: 5%;
+    text-align: right;
 }
 
 .name {
+    display: inline-block;
     font-size: 8rem;
     font-weight: 900;
     text-align: right;
-    padding-right: 8vw;
+    padding-right: 8%;
+}
 
+@media screen and (max-width: 1500px) {
+    .name {
+        padding-right: 10%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .name {
+        padding-right: 12%;
+    }
+}
+
+@media screen and (max-width: 796px) {
+    /* .name {
+        padding-right: 10%;
+    } */
+}
+
+@media screen and (max-width: 630px) {
+    .name {
+        font-size: 6rem;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    /* .nameWrapper {
+        transform: rotateY(-60deg);
+    } */
+
+    .name {
+        font-size: 4rem;
+    }
 }
