--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,11 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 12%;
   min-height: 87vh;
 }
 
 .main {
   min-height: 100vh;
+  width: 100%;
   padding: 4rem 0;
   flex: 1;
   display: flex;
