--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    transform: rotateY(-45deg);
     transform-style: preserve-3d;
     padding-top: 5%;
     text-align: right;
@@ -18,10 +17,10 @@
 
 .name {
     display: inline-block;
-    font-size: 8rem;
+    font-size: 9.5vw;
     font-weight: 900;
     text-align: right;
-    padding-right: 8%;
+    padding-right: 13%;
 }
 
 @media screen and (max-width: 1500px) {
