--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -8,12 +8,10 @@
 
 .nameWrapper {
     display: flex;
-    flex-direction: column;
     height: 100%;
     transform-style: preserve-3d;
     padding-top: 5%;
-    text-align: right;
-    display: flex;
+    align-items: flex-end;
     flex-direction: column;
     width: 100%;
 }
