--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,7 +1,7 @@
 .hero {
-    min-height: 600px;
-    width: 90vw;
-    margin-top: 90px;
+    /* min-height: 600px; */
+    width: 100%;
+    /* margin-top: 40px; */
     perspective: 1000px;
     position: relative;
 }
@@ -16,36 +16,49 @@
     width: 100%;
 }
 
+
+/* .imgWrapper {
+    
+} */
+
 .name {
     display: block;
     font-size: 9.5vw;
     font-weight: 900;
     text-align: right;
-    padding-right: 13%;
+    /* padding-right: 13%; */
+    width: 100%;
 }
+
+@media screen and (max-width: 700px) {}
 
 @media screen and (max-width: 1500px) {
     .name {
-        padding-right: 10%;
+        /* padding-right: 10%; */
     }
 }
 
 @media screen and (max-width: 1200px) {
     .name {
-        padding-right: 12%;
+        /* padding-right: 12%; */
     }
 }
 
 @media screen and (max-width: 796px) {
+
     /* .name {
         padding-right: 10%;
     } */
+
 }
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 600px) {
     .name {
-        font-size: 6rem;
+        font-size: 4rem;
+        text-align: center;
     }
+
+
 }
 
 @media screen and (max-width: 467px) {
@@ -55,5 +68,6 @@
 
     .name {
         font-size: 4rem;
+        text-align: center;
     }
 }
