--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,12 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.lobster {
+::-webkit-scrollbar {
+  width: 0px;
+
+}
+
+.font-lobster {
   font-family: 'Lobster', cursive;
 }
 
